--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ torch = {url="https://download.pytorch.org/whl/cpu/torch-1.12.0%2Bcpu-cp37-cp37m
 jupyter = "^1.0.0"
 ipython = "7.34"
 tqdm = "^4.64.0"
+ipywidgets = "^8.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
